--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <!--  Document Settings -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="theme-color" content="#FF1B81">
+    <meta name="theme-color" content="#8EBC2A">
 
 <!--  Page Meta-->
     <title>SMARTBRIX</title>
@@ -266,7 +266,8 @@
                           <input class="css-input col-md-12" type="text"  name="nombre" placeholder="Nombre y Apellidos" required />
                         
                         </div>
-                        <button class="col-xs-12 send-btn-free btn-block">Inscribirme</button>
+                        <BR>
+                        <button class="col-xs-12 send-btn-con btn-block">ENVIAR</button>
                     </form>
                   </div>
                   
@@ -296,7 +297,7 @@
 
 
 
-    <div class=" section col-xs-12 " id="#footer">            
+    <div class=" section col-xs-12  " id="#footer">            
         <div class="col-xs-12 col-md-12 footer-c1">
             <a href="/"> <img class="logo-foot" src="https://s3.amazonaws.com/cannedhead.smartbrix/logo-completo.svg"></a>
         </div>
