--- a/home.html
+++ b/home.html
@@ -299,7 +299,7 @@
 
     <div class=" section col-xs-12  " id="#footer">            
         <div class="col-xs-12 col-md-12 footer-c1">
-            <a href="/"> <img class="logo-foot" src="https://s3.amazonaws.com/cannedhead.smartbrix/logo-completo.svg"></a>
+            <a href="/"> <img class="logo-foot" src="https://s3.amazonaws.com/cannedhead.smartbrix/logo-estandar.svg"></a>
         </div>
         <div class="col-xs-12">
           <div class="col-xs-12 col-sm-6 no-padding footer-c2">
