--- a/home.html
+++ b/home.html
@@ -360,7 +360,7 @@
 
 
           <div class="col-xs-12 no-padding footer-c3">
-              <p>© 2013 SMARTBRIX - ESPACION MODULARES. TODOS LOS DERECHOS RESERVADOS</p>
+              <p>© 2013 SMARTBRIX - ESPACIOS MODULARES. TODOS LOS DERECHOS RESERVADOS</p>
           </div>
         </div>
 
