--- a/home.html
+++ b/home.html
@@ -279,7 +279,7 @@
 
     </div>
     <div class="section">
-      <div class="col-xs-12 no-padding vid">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 vid">
         <iframe class="video-home" width="560" height="315" src="https://www.youtube.com/embed/8YVG7coRV2Q" frameborder="0" allowfullscreen></iframe>
       </div>
 
