--- a/home.html
+++ b/home.html
@@ -155,7 +155,7 @@
         </div>
         <!--  Down Arrow-->
         <div id="arrow-down" class="arrow-down2 ">
-          <a data-scroll href="#quote">
+          <a data-scroll href="#p-screen">
             <i class="ion-ios-arrow-down center-block"></i>
           </a>
         </div>    
@@ -279,7 +279,7 @@
 
     </div>
     <div class="section">
-      <div class="col-xs-12 col-md-8 col-md-offset-2 vid">
+      <div class="col-xs-12 col-md-10 col-md-offset-1 vid">
         <iframe class="video-home" width="560" height="315" src="https://www.youtube.com/embed/8YVG7coRV2Q" frameborder="0" allowfullscreen></iframe>
       </div>
 
