--- a/home.html
+++ b/home.html
@@ -212,7 +212,7 @@
         <h2>PROYECTOS</h2>
         <h5> Soluciones de referencia</h5>
       </div>
-        <div class="col-xs-12 col-md-9">
+        <div class="col-xs-12 col-lg-9 contenedor-slider">
           <div class="slider js-slider">
             <ul class="slider__wrap js-slider__wrap">
               <li class="slider__item js-slider__item slider__item--active">
@@ -249,7 +249,7 @@
           <div class="col-xs-12 contact-btn2">
               <div class="col-xs-12 contact-btn-2 va">
 
-                  <div class="col-md-10 col-md-offset-1 conta-home">
+                  <div class=" conta-home">
 
                   <div class="col-xs-4 col-md-12 no-padding contact-btn-icon">
                     <i class="fa fa fa-file-o "></i>
