--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
   <div class="menu-wrap">
     <nav class="menu">
         <div class="col-xs-12 list-mobile">
-          <a href="/#"><h2>NOSOTROS </h2></a>
+          <a href="/nosotros.html"><h2>NOSOTROS </h2></a>
           <a href="/#"><h2>PRODUCTOS </h2></a>
           <a href="/#"><h2>PROYECTOS</h2></a>
           <a href="/#"><h2>SERVICIOS</h2></a>
