--- a/nosotros.html
+++ b/nosotros.html
@@ -62,8 +62,8 @@
 
 	<!--  NAVBAR MOBILE  --> 
 	<div class="navbar-smart-mobile col-xs-12 no-padding">
-		<div class="col-xs-2 logo-anim-mobile">
-			<a href="/"> <img class="" src="https://s3.amazonaws.com/cannedhead.smartbrix/logo-simple.svg"></a>
+		<div class="col-xs-2 nosotros-mobile">
+			<a href="/"> <img class="" src="https://s3.amazonaws.com/cannedhead.smartbrix/nosotros/nosotros.png"></a>
 		</div>
 
 		<div class="col-xs-10 no-padding social-pillow">
