--- a/nosotros.html
+++ b/nosotros.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 	
-<!--  Document Settings -->
+		<!--  Document Settings -->
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="theme-color" content="#8EBC2A">
 
-<!--  Page Meta-->
+		<!--  Page Meta-->
 		<title>SMARTBRIX</title>
 		<meta name="description" content="meta_description" />
 		<meta name="HandheldFriendly" content="True" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="favicon.ico">
-<!--  Page Meta-->
+
+		<!--  Page Meta-->
 		<link rel="stylesheet" type="text/css" href="css/screen.css" />
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="css/nosotros.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/animate.css" />
 		<link rel="stylesheet" type="text/css" href="css/ionicons.min.css" />
@@ -126,100 +128,44 @@
 	<!--  MENU MOBILE END  -->
 
 	<div id="fullpage">
-		<!--  Screen 1 Home-->  
-		<div class="section screen1"id="h-screen">
-			<div class="col-sm-12 cont-home no-padding">
-				<!--  Filtro-->        
-				<div style="text-align:center;">
-					<div class="col-sm-12">
-						<!--  logo--> 
-						<div class="col-sm-12">
-							<a href="#"> <img class="logo" src="https://s3.amazonaws.com/cannedhead.smartbrix/logo-completo.svg"></a>
-							<h4>Lideres en construcciones modulares</h4>
-						</div>
-						<!--  logo certificado--> 
-						<div class="col-sm-12 certificado-home">
-							<a href="#"> <img class="" src="https://s3.amazonaws.com/cannedhead.smartbrix/certificacion.png"></a>
-							<h5>Ofrecemos productos y servicios de calidad</h5>
-						</div>
-					</div>
-				</div>
-				<!--  Down Arrow-->
-				<div id="arrow-down" class="arrow-down2 ">
-					<a data-scroll href="#p-screen">
-						<i class="ion-ios-arrow-down center-block"></i>
-					</a>
-				</div>    
-			</div>    
-		</div>
+		
+		<!--  Screen 1 us-smartbrix-->  
+	    <div class="section col-xs-12 col-sm-12 col-md-12 nosotros" id='us-nosotros'>
+	          <a class="center-block" href="/#">
+	              <div class="nosotros-img1">
+	              </div>
+	          </a>
+		      <p class='title'>SMART BRIX</p>
+		      <hr>
+		      <p class='paragraph'>líder en construcción modular, es una empresa innovadora y dinámica, especializada en ofrecer soluciones de espacios multiusos temporales o permanentes, enfocadas en cubrir las necesidades y expectativas que cada cliente exige. <br><br> Orientamos nuestros esfuerzos para otorgar un servicio integral Llave en mano que garantiza el perfecto equilibrio entre calidad, diseño, costo y plazo de entrega, me-diante un producto innovador, recurso humano competente y un servicio personalizado de principio a fin. <br><br> Actualmente, contamos con sedes en Colombia y Panamá, desde las cuales op-eramos para servir a todo el mercado latinoamericano.<p>
+	          <a class="center-block" href="/#">
+	              <div class="nosotros-img2">
+	              </div>
+	          </a>
+	    </div>
 
-		<div class=" section col-xs-12  " id="#footer">            
-				<div class="col-xs-12 col-md-12 footer-c1">
-						<a href="/"> <img class="logo-foot" src="https://s3.amazonaws.com/cannedhead.smartbrix/logo-estandar.svg"></a>
-				</div>
-				<div class="col-xs-12">
-					<div class="col-xs-12 col-sm-6 no-padding footer-c2">
-						<a href="">
-							<div class="col-xs-12 contact-btn">
-								<div class="col-xs-12 contact-btn-2 va">
-									<div class="col-xs-8 va">
-										<p>CONTÁCTANOS</p>
-									</div>
-									<div class="col-xs-4 contact-btn-icon va">
-										<i class="fa fa fa-file-o "></i>
-									</div>
-								</div>
-								
-							</div>
-						</a>
-					</div>
+		<!--  Screen 2 us-mision-->  
+  		<div class="section col-xs-12 col-sm-12 col-md-12" id='us-mision'>
+		    <div class='col-xs-12 col-sm-12 col-md-12'>
+		      <p class='title'>MISIÓN / VISIÓN</p>
+		      <hr>
+		      <p class='paragraph'>SmartBrix Espacios Modulares S.A.S es una empresa que provee espacios modulares rápidos, de alta calidad y diseño, con énfasis especial en la atención al cliente. <br><br> Ser la compañía líder en el mercado colombiano para el 2015, y con presencia en Latino América para el 2018.<p>
+	      	</div>
+      	</div>
 
-					<div class="col-sm-12 col-sm-6 col-md-4 footer-c4">
-						<h5 class="col-xs-8 no-padding">Ofrecemos productos y servicios de calidad</h5>
-						<a class="col-xs-4 no-padding" href="#"> <img class="" src="https://s3.amazonaws.com/cannedhead.smartbrix/certificacion.png"></a>
-					</div>
+		<!--  Screen 3 us-politicas-->  
+	    <div class="section col-xs-12 col-sm-12 col-md-12" id='us-politicas'>
+	          <a class="center-block" href="/#">
+	              <div class="nosotros-img3">
+	              </div>
+	          </a>
+		      <p class='title'>POLITICA HSEQ</p>
+		      <hr>
+		      <p class='title2'>Politica de calidad</p>
+		      <p class='paragraph'>Orientamos nuestros esfuerzos a la gestión de procesos y al mejoramiento continuo enfocado en cubrir las necesidades y expectativas de nuestros clientes de manera oportuna, con calidad y costos razonables, apoyándonos en un recurso humano competente.<p>
 
-					<div class="col-xs-12 col-md-4 footer-c6">
-						<p>Inscríbete a nuestro boletin</p>
-						<br>
-						<form id="info-free" method="post" action= "/info_freedom")>
-								<div class="inputGroup2">      
-									<input type="text"  name="nombre"  required />
-									<span class="inputBar"></span>
-									<label>E-mail</label>
-								</div>
-								<button class="col-xs-5 send-btn-free btn-block">Inscribirme</button>
-						</form>
-					</div>
+	    </div>
 
-					<div class="col-xs-12 col-md-4 footer-c5">
-						<div class="center-block social-row">
-							<a href="#">
-								<div class="social-div-mobile-linkedin">
-									<i class="fa fa-linkedin"></i>
-								</div>
-							</a>
-							<a href="#">
-								<div class="social-div-mobile-plus">
-									<i class="fa fa-google-plus"></i>
-								</div>
-							</a>
-							<a href="#">
-								<div class="social-div-mobile-face">
-									<i class="fa fa-facebook"></i>
-								</div>
-							</a>
-						</div>
-
-					</div>
-
-
-
-					<div class="col-xs-12 no-padding footer-c3">
-							<p>© 2013 SMARTBRIX - ESPACIOS MODULARES. TODOS LOS DERECHOS RESERVADOS</p>
-					</div>
-				</div>
-		</div>
 	</div>
 
 		<!-- Main js -->
