--- a/nosotros.html
+++ b/nosotros.html
@@ -156,14 +156,23 @@
 		<!--  Screen 3 us-politicas-->  
 	    <div class="section col-xs-12 col-sm-12 col-md-12" id='us-politicas'>
 	          <a class="center-block" href="/#">
-	              <div class="nosotros-img3">
-	              </div>
+		              <div class="nosotros-img3">
+		              </div>
 	          </a>
-		      <p class='title'>POLITICA HSEQ</p>
-		      <hr>
-		      <p class='title2'>Politica de calidad</p>
-		      <p class='paragraph'>Orientamos nuestros esfuerzos a la gestión de procesos y al mejoramiento continuo enfocado en cubrir las necesidades y expectativas de nuestros clientes de manera oportuna, con calidad y costos razonables, apoyándonos en un recurso humano competente.<p>
-
+			  <div class='col-xs-12 col-sm-12 col-md-12'>
+		            <p class='title'>POLÍTICA HSEQ</p>
+			        <hr>
+			        <p class='title2'>Politica de calidad</p>
+			        <p class='paragraph'>Orientamos nuestros esfuerzos a la gestión de procesos y al mejoramiento continuo enfocado en cubrir las necesidades y expectativas de nuestros clientes de manera oportuna, con calidad y costos razonables, apoyándonos en un recurso humano competente.<p>
+					<ul class="square">
+					 	<li>Mejorar continuamente los procesos de la organización.</li>
+					  	<li>Satisfacer al cliente según sus requerimientos en aspectos de calidad y servicio.</li>
+					  	<li>Aumentar la oportunidad en los despachos para garantizar la satisfaccion del cliente.</li>
+					  	<li>Tener proveedores confiables. Que cumplan con tiempos de entrega establecidos y nos ofrezcan las mejores condiciones para poder competir en el mercado.</li>
+					  	<li>Aumentar nuestras ventas en las diferentes lineas.</li>
+					  	<li>Cumplir con las metas establecidas en los indicadores de procesos para optimizar las actividades.</li>
+					</ul>			  
+			  </div>
 	    </div>
 
 	</div>
