--- a/nosotros.html
+++ b/nosotros.html
@@ -164,6 +164,7 @@
 			        <hr>
 			        <p class='title2'>Politica de calidad</p>
 			        <p class='paragraph'>Orientamos nuestros esfuerzos a la gestión de procesos y al mejoramiento continuo enfocado en cubrir las necesidades y expectativas de nuestros clientes de manera oportuna, con calidad y costos razonables, apoyándonos en un recurso humano competente.<p>
+					<p class='title2'>Objetivos de la calidad</p>
 					<ul class="square">
 					 	<li>Mejorar continuamente los procesos de la organización.</li>
 					  	<li>Satisfacer al cliente según sus requerimientos en aspectos de calidad y servicio.</li>
