--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
 
     <div class="col-md-8 menu-top">
       <ul id="menu-smart">
-        <li><a class="link-menu" href="">INICIO</a></li>
-        <li><a class="link-menu" href="">NOSOTROS</a></li>
+        <li><a class="link-menu" href="/">INICIO</a></li>
+        <li><a class="link-menu" href="/nosotros">NOSOTROS</a></li>
         <li><a data-scroll class="serLink" href="">PRODUCTOS</a>
           <div class="dropSer menu-list">     
             <a href="/"><span><p>Bodegas Prefabricadas</p></span></a>
@@ -210,6 +210,8 @@
           </a>
       </div>
     </div>
+
+    
     <!--  Screen 3 Proyectos--> 
     <div class="section proyectos col-xs-12 no-padding " id="p-screen">
       <div class="col-xs-12">
@@ -278,6 +280,8 @@
         </div>
 
     </div>
+
+
     <div class="section">
       <div class="col-xs-12 no-padding col-md-12 vid">
         <iframe class="video-home" width="560" height="315" src="https://www.youtube.com/embed/8YVG7coRV2Q" frameborder="0" allowfullscreen></iframe>
@@ -310,7 +314,7 @@
                   <div class="col-xs-8 va">
                     <p>CONTÁCTANOS</p>
                   </div>
-                  <div class="col-xs-4 contact-btn-icon va">
+                  <div class="col-xs-4 contact-btn-icon no-padding va">
                     <i class="fa fa fa-file-o "></i>
                   </div>
                 </div>
